# MathForge

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DECISIONS.md  MIGRATIONS.md  Makefile  PLAN.md  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
app/: api_schemas.py  config.py  database.py  logging_config.py  main.py
app/models/: enums.py  paper.py  passage.py  question.py  types.py
app/routers/: papers.py  questions.py
app/services/: __init__.py  cart_middleware.py  demo_seed.py  file_service.py  paper_service.py  prompt_loader.py  question_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html
app/templates/export/: paper.tex.j2  print.html
app/templates/papers/: _cart_bar.html  new.html  result.html
app/templates/questions/: _filters.html  _pagination.html  _table.html  detail.html  list.html
docs/: ci-setup.md  pre-commit.md
docs/superpowers/plans/: 2026-07-13-p1-browse-detail.md  2026-07-13-p2-composition.md
docs/superpowers/specs/: 2026-07-13-p1-browse-detail-design.md  (+1 more)
prompts/: knowledge_tree_seed.json  metadata_prompt.txt  ocr_prompt.txt
scripts/: init_db.py
test_openapi_includes_tags0/: vault.db
tests/: conftest.py  test_config.py  test_database.py  test_demo_seed.py  test_file_service.py  test_init_db.py  test_main.py  test_models.py  test_papers.py  test_papers_router.py  test_prompt_loader.py  test_question_service.py  test_questions_router.py  test_types.py
